--- a/RoadTripPlannerApp/View/LoadingPage.xaml
+++ b/RoadTripPlannerApp/View/LoadingPage.xaml
@@ -4,8 +4,10 @@
              x:Class="RoadTripPlannerApp.View.LoadingPage"
              Title="LoadingPage"
              Shell.NavBarIsVisible="False">
-    <Grid RowDefinitions="*"
-          Margin="50">
-        <ActivityIndicator IsRunning="True" IsVisible="True" />
+    <Grid RowDefinitions="*">
+        <ActivityIndicator IsRunning="True" 
+                           IsVisible="True"
+                           HeightRequest="100"
+                           WidthRequest="100"/>
     </Grid>
 </ContentPage>
